day7/apps/dotnetcore/manifests/scmapi/scm-deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: scm-deploy 
  labels:
    application: scmcontacts
    service: scmapi
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: scmcontacts
      service: scmapi
  template:
    metadata:
      labels:
        application: scmcontacts
        service: scmapi
    spec:
      containers:
        - name: application
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          image: azuredevcollege.azurecr.io/adcday7/scmapi
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5000
